--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
 
                 <div class="contact-info">
 
+
                     <div class="form-field">
 
                         <form action="home.html" method="post">
@@ -73,19 +74,19 @@
                             <div class="labeldiv">
 
                                 <label for="fullname"></label>
-                                <input name="fullname" id="fullname" placeholder="name">
+                                <input name="fullname" id="fullname" placeholder="Name">
 
 
                                 <label for="email"></label>
-                                <input name="email" id="email" placeholder="e-mail">
+                                <input name="email" id="email" placeholder="E-mail">
 
 
                                 <label for="topic"></label>
-                                <textarea name="topic" id="topic" placeholder="topic"></textarea>
+                                <textarea name="topic" id="topic" placeholder="Topic"></textarea>
 
 
                                 <label for="message"></label>
-                                <textarea name="message" id="message" placeholder="message"></textarea>
+                                <textarea name="message" id="message" placeholder="Message"></textarea>
 
                             </div>
 
@@ -95,47 +96,55 @@
 
                     </div>
 
+
                     <div class="map">
 
-                        <h2>WHERE WE ARE</h2>
+                        <h3>WHERE WE ARE</h3>
 
-                        <div class="mapembed">
+                        <div id="map-embed">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5600.058970304017!2d-75.69556477280966!3d45.42890696640197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce050261d6c9c7%3A0xc02283c07a3b83a2!2sByWard%20Market%2C%20Ottawa%2C%20ON!5e0!3m2!1sen!2sca!4v1646753438397!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                         </div>
 
                     </div>
 
-                    <h2>Hours Of Operation</h2>
+                </div>    
 
-                    <table class="hoo">
 
-                        <tr>
-                            <th>Days</th>
-                            <th>Time</th>
-                        </tr>
+                    <div class="tablehoo">
 
-                        <tr>
-                            <td>Monday - Friday</td>
-                            <td>11:00am - 5:00pm</td>
-                        </tr>
+                      <h3>Hours Of Operation</h3>
+
+                      <table class="hoo">
+
+                          <tr>
+                              <th>Days</th>
+                              <th>Time</th>
+                          </tr>
+
+                          <tr>
+                              <td>Monday - Friday</td>
+                              <td>11:00am - 5:00pm</td>
+                          </tr>
        
-                        <tr>
-                            <td>Saturday</td>
-                            <td>10:00am - 6:00pm</td>
-                        </tr>
+                          <tr>
+                              <td>Saturday</td>
+                              <td>10:00am - 6:00pm</td>
+                          </tr>
 
-                        <tr>
-                            <td>Sunday</td>
-                            <td>Closed</td>
-                        </tr>
+                          <tr>
+                              <td>Sunday</td>
+                              <td>Closed</td>
+                          </tr>
 
-                    </table>
+                      </table>
+
+                    </div>  
 
                     <p>99 Summervale Ave</p>
                     <p>(613)513-8008</p>
 
-                 </div>
+                 
 
               </div>   
 
