--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,8 @@
 
                     <div class="form-field">
 
+                        <h3>REACH OUT</h3>
+
                         <form action="home.html" method="post">
 
                             <div class="labeldiv">
@@ -108,9 +110,9 @@
 
                     </div>
 
-                </div>    
-
-
+                </div> 
+                
+            
                     <div class="tablehoo">
 
                       <h3>Hours Of Operation</h3>
