i actually might do this on time damn

--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,14 @@
                   </div>
 
                 
-                  <ul class="topmenu">
-                      <li>HOME</li>
-                      <li>ABOUT</li>
-                      <li>CONTACT</li>
-                  </ul>
+                  <div class="topmenu">
+                    <ul>
+                        <li>HOME</li>
+                        <li>ABOUT</li>
+                        <li>CONTACT</li>
+                    </ul>
+                  </div>
+
 
                   <img src="images/contact-image.jpg" alt="banner" id="contact-image"> 
 
