--- a/contact.html
+++ b/contact.html
@@ -181,9 +181,12 @@
             =============================================FOOTER=====================================================
             ======================================================================================================-->
 
-             <div id="footer">
 
-                <div class="logos">
+        <footer>
+
+            <div id="footer">
+
+                <div class="socials">
                     <img src="images/facebook.png" alt="facebook-logo" id="facebook">
                     <img src="images/twitter.png" alt="twitter-logo" id="twitter">
                     <img src="images/instagram.png" alt="instagram-logo" id="instagram">
@@ -198,6 +201,8 @@
 
              </div>
 
+        </footer>    
+          
     </div>
     
   </body>
