--- a/aboutus.html
+++ b/aboutus.html
@@ -42,10 +42,10 @@
                           </div>
                             
                           <ul class="topmenu">
-                              <li>HOME</li>
-                              <li>CONTACT</li>
-                              <li>ABOUT</li>
-                          </ul>
+                            <li><a href="home.html">HOME</a></li>
+                            <li><a href="contact.html">CONTACT</a><li>
+                            <li><a href="aboutus.html">ABOUT</a></li>    
+                        </ul>
             
                           <div class="call-2-act">
                               <button class="appointment">MAKE AN APPOINTMENT</button>
