--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>QueenKiraCakeShop</title>
       <link href="css/contact.css" rel="stylesheet">
+      <link href="css/contact-media.css" rel="stylesheet">
 
       <!--Manjari-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,7 +58,7 @@
 
                        
                        <div id="logo">
-                        <img src="images/contact-image.jpg" alt="contact-image" id="contact-image">
+                        <img src="images/aboutus-banner.jpg" alt="mainbanner" id="mainbanner">
                        </div>
         
                       </nav>  
